# every

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: main.c
